--- a/style.css
+++ b/style.css
@@ -76,5 +76,152 @@ nav{
     border: 0;
     outline: none;
     background: transparent;
+}
 
+.search-bar form button{
+    background: #ff5361;
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    border: 0;
+    outline: none;
+    cursor: pointer;
+}
+
+.search-bar form button img{
+    width: 15px;
+    margin-top: 7px;
+}
+
+.location-input{
+    flex: 1;
+}
+
+.search-bar form label{
+    font-weight: 600;
+}
+
+/* --- exclusives ---*/
+.sub-title{
+     margin: 50px 0 20px;
+     font-size: 2.2vw;
+     font-weight: 500;
+     color: #333;
+ }
+
+ .exclusives{
+     display: grid;
+     grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
+     grid-gap: 30px; 
+ }
+
+ .exclusives div img{
+     width: 100%;
+     border-radius: 10px;
+ }
+
+ .exclusives div{
+     position: relative;
+ }
+
+ .exclusives div span{
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     transform: translate(-50%, -50%);
+     text-align: center;
+     color: #fff;
+ }
+
+ /* --- trending places ---*/
+ .trending{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-gap: 30px;
+    margin-bottom: 30px; 
+ }
+
+ .trending div img{
+     width: 100%;
+     border-radius: 10px;
+ }
+
+ .trending h3{
+     font-weight: 600;
+     margin-top: 10px;
+ }
+
+ /* --- call to action ---*/
+
+ .cta{
+     margin: 80px 0;
+     background-image: linear-gradient(to right, #3f2321, transparent), url(images/banner-2.png);
+     background-size: cover;
+     background-position: center;
+     border-radius: 10px;
+     padding: 5%;
+     color: #fff;
+ }
+
+ .cta h3{
+     font-size: 4vw;
+     line-height: 5.3vw;
+     font-weight: 500;
+ }
+
+ .cta p{
+     font-size: 18px;
+     margin: 10px 0;
+ }
+
+ .cta-btn{
+     background: #ff5361;
+     color: #fff;
+     text-decoration: none;
+     padding: 12px 30px;
+     border-radius: 8px;
+     margin-top: 20px;
+     display: inline-block;
+ }
+
+ /* --- travellers stories ---*/
+.stories{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-gap: 30px;
+    margin-bottom: 30px; 
+}
+
+.stories div img{
+    width: 100%;
+    border-radius: 10px;
+}
+ 
+.stories div{
+    position: relative;
+    text-align: center;
+}
+
+.stories p{
+    width: 80%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-size: 26px;
+}
+
+.start-btn{
+    text-decoration: none;
+    background: #ff5361;
+    color: #fff;
+    width: 80%;
+    max-width: 350px;
+    display: block;
+    text-align: center;
+    margin: 60px auto;
+    padding: 15px;
+    border-radius: 30px;
+    font-size: 20px;
 }
